add a vdom view

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/crosspad.css">
   </head>
   <body>
-    <div id="main"><div/></div>
+    <!--<div id="main"><div/></div>-->
     <script src="js/crosspad.js"></script>
   </body>
 </html>
